--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="sizeInfo">
+		<h1>Width: <span id="width"></span>
+			Height: <span id="height"></span></h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
